scolar-core/language-component-tool/src/test/resources/cocos/languageComponents/invalid/GENPPAndEPNamesNotUnique.comp
package cocos.languageComponents.invalid;

import cocos._generator._producer.MA2JavaProducer.*;
import cocos._generator._product.MA2JavaProduct.*;
import cocos._generator._producer.MAInv2JavaProducer.*;
import cocos._generator._product.MAInv2JavaProduct.*;

language component GENPPAndEPNamesNotUnique {

  grammar mc.lang.MontiArc;

  provides gen Komponente2Java for Component {
    producer IMontiArcGenerator;
    product IComputable;
  }

  provides gen Komponente2Java for Component {
    producer IMontiArcGenerator;
    product IComputable;
  }

  requires optional gen Invariante2Java for Invariant {
    producer IMAInvGen;
    product  MAInvChecker;
  }
  
  requires optional gen Invariante2Java for Invariant {
    producer IMAInvGen;
    product  MAInvChecker;
  }
}
